--- a/style.css
+++ b/style.css
@@ -164,14 +164,14 @@ body {
   height: 12px;
   width: 12px;
   margin: 0 5px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--golden-yellow);
   border-radius: 50%;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .dot.active {
-  background-color: var(--golden-yellow);
+  background-color: var(--maroon);
 }
 
 /* ======================================================================= */
